[tool.poetry]
name = "openai-tiktoken"
version = "0.1.0"
description = ""
authors = ["Dmytro Movchan <mail@dmtmov.me>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.4.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
